...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: AppConstants.backgroundColor,
      appBar: AppBar(
        title: const Text('Crop Recommendations',
            style: TextStyle(color: Colors.white)),
        backgroundColor: AppConstants.primaryGreen,
        foregroundColor: Colors.white,
        actions: [
          Consumer<UserProvider>(builder: (context, userProvider, _) {
            return IconButton(
...
                          padding: EdgeInsets.all(8),
                          child: Row(
                            children: [
                              Icon(Icons.star, color: AppConstants.accentGreen),
                              SizedBox(width: 8),
                              Text(
                                'Top Recommendation',
                                style: TextStyle(
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold,
                                  color: AppConstants.accentGreen,
                                ),
                              ),
...
