...
            stage: 'Harvest',
            daysFromPlanting: 120,
            progress: 0,
            description: 'Ready for harvest',
            isCompleted: false),
      ],
      'Wheat': [
        GrowthStage(
            stage: 'Seed',
            daysFromPlanting: 0,
            progress: 100,
            description: 'Seeds planted',
            isCompleted: true),
...
